Different Spring Context

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+# ???????????? StubEmployeeService
+app.service.employee.stub=true
+# ???????????? NullEmployeeService
+app.service.employee.null=false
+# ???? ??????? (????? ?????? ?????????? ?? ???? ?????)
+server.port=8080
 
+# ??????????? ?????? ??????????? ??? ??????-???? ?????? (? ?.?. ????????)
+logging.level.de.marshal.javaspringcw=DEBUG
